[workspace]
members = [
    "wired_handler",
    "wired_handler_derive",
    "wired_handler_hyper",
    "wired_handler_hyper_derive"
]
resolver = "2"

[workspace.package]
version = "0.12.0"

[workspace.dependencies]
wired_handler = { path = "./wired_handler", version = "0.12.0" }
wired_handler_derive = { path = "./wired_handler_derive", version = "0.12.0" }
tokio = "1.43.0"
syn = "2.0.98"
quote = "1.0.38"
thiserror = "2.0.11"
rustc-hash = "2.1.1"
tracing = "0.1.41"
uuid = { version = "1.15.1", features = ["v4"] }
async_fn_traits = "0.1.1"
futures = "0.3.31"

hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
hyper-tungstenite = "0.17.0"
http-body-util = "0.1.2"
http = "1.2.0"

serde = { version = "1.0.218", features = ["derive"] }
serde_html_form = "0.2.7"
serde_json = "1.0.139"

diesel = "2.2.7"
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = "2.2.0"
