[workspace]
members = [
    "wired_handler",
    "wired_handler_derive",
    "wired_handler_hyper",
    "wired_handler_hyper_derive",
]
resolver = "2"

[workspace.package]
version = "0.12.0"

[workspace.dependencies]
wired_handler = { path = "./wired_handler", version = "0.12.0" }
wired_handler_derive = { path = "./wired_handler_derive", version = "0.12.0" }
tokio = "1.48.0"
syn = "2.0.111"
quote = "1.0.42"
thiserror = "2.0.17"
rustc-hash = "2.1.1"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4"] }
async_fn_traits = "0.1.1"
futures = "0.3.31"

hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
hyper-tungstenite = "0.19.0"
http-body-util = "0.1.3"
http = "1.4.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.3.2"
serde_json = "1.0.147"

diesel = "2.3.5"
diesel-async = { version = "0.7.4", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
] }
diesel_migrations = "2.3.1"
