[package]
name = "wired_handler"
version = "0.1.0"
edition = "2021"
description = "Wired's handler library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
log.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { features = ["rt-multi-thread"] }
