[package]
name = "wired_handler"
version = "0.1.3"
edition = "2021"
description = "Wired's handler library"
license = "MIT"
repository = "https://github.com/MarekWojt/wired_handler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
log.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { features = ["rt-multi-thread"] }
