[package]
name = "wired_handler"
version.workspace = true
edition = "2021"
description = "Wired's handler library"
license = "MIT"
repository = "https://github.com/MarekWojt/wired_handler"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
wired_handler_derive.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror.workspace = true
